<resources>
    <string name="app_name">Kevin Giroux Portfolio</string>
    <string name="titleMainActivityStr">My Nanodegree Apps !</string>
    <string name="mainPopularMoviesStr">POPULAR MOVIES</string>
    <string name="mainStockHawkStr">STOCK HAWK</string>
    <string name="mainBuildItBiggerStr">BUILD IT BIGGER</string>
    <string name="mainMakeYourAppMaterialStr">MAKE YOU APP MATERIAL</string>
    <string name="mainGoUbiquitousStr">GO UBIQUITOUS</string>
    <string name="mainCapstoneStr">CAPSTONE</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_list_title">Sort research</string>
    <string name="action_settings">Settings</string>
    <string name="SearchOption">Search Option</string>
    <string name="pref_list_key">orderSort</string>
    <string name="pref_list_default">popular</string>
    <string name="pref_list_exclude">favoriteMovies</string>
    <string-array name="pref_list_titles">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorite Movies</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favoriteMovies</item>
    </string-array>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="apiKey">c31a455f61c0ef7088b1177843ce8372</string>
    <string name="title_activity_popular2">PopularActivity2</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="markasfavorite">Mark as Favorite</string>
    <string name="errorOccured">An error occured</string>
    <string name="favoriteMovie">Favorite Movie</string>
    <string name="popularMovie">Popular Movie</string>
    <string name="synopsis">Synopsis</string>
    <string name="warningIntent">No webbrowser or Youtube app found for performing this action</string>
    <string name="nbRowConcernByDatabaseOperation">Nb row concerned by the operation </string>

</resources>
