<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:actionBarNavMode="standard"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/titleMainActivityStr"
        android:id="@+id/titleMainActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <ScrollView
        android:layout_below="@id/titleMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainPopularMoviesStr"
                android:id="@+id/mainPopularMovies"
                android:layout_centerHorizontal="true" />

            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainStockHawkStr"
                android:id="@+id/mainStockHawk"
                android:layout_below="@+id/mainPopularMovies"
                android:layout_alignLeft="@+id/mainPopularMovies"
                android:layout_alignStart="@+id/mainPopularMovies" />

            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainBuildItBiggerStr"
                android:id="@+id/mainBuildItBigger"
                android:layout_below="@+id/mainStockHawk"
                android:layout_alignLeft="@+id/mainStockHawk"
                android:layout_alignStart="@+id/mainStockHawk" />

            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainMakeYourAppMaterialStr"
                android:id="@+id/mainMakeYourAppMaterial"
                android:layout_below="@+id/mainBuildItBigger"
                android:layout_alignLeft="@+id/mainBuildItBigger"
                android:layout_alignStart="@+id/mainBuildItBigger" />

            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainGoUbiquitousStr"
                android:id="@+id/mainGoUbiquitous"
                android:layout_below="@+id/mainMakeYourAppMaterial"
                android:layout_alignLeft="@+id/mainMakeYourAppMaterial"
                android:layout_alignStart="@+id/mainMakeYourAppMaterial" />

            <Button
                style="@style/ButtonAppTheme"
                android:text="@string/mainCapstoneStr"
                android:id="@+id/mainCapstone"
                android:layout_below="@+id/mainGoUbiquitous"
                android:layout_alignLeft="@+id/mainGoUbiquitous"
                android:layout_alignStart="@+id/mainGoUbiquitous" />

        </RelativeLayout>

    </ScrollView>






</RelativeLayout>
